Use vw to avoid sharp shift when parent width changes caused by scroll bar

--- a/src/components/Load/Load.module.css
+++ b/src/components/Load/Load.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   padding-top: 10rem;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   background-color: rgb(0, 6, 26);
   position: absolute;
